cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_75.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:56: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:56:17: Write of unused value
54.               if (n == 0) {
55.                   c2l(iv, v0);
56.                   c2l(iv, v1);
                      ^
57.   
58.                   ti[0] = v0;
